# real-time-lakehouse

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  AGENT_CONTEXT.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  requirements-test.txt
.github/workflows/: cd.yml  ci.yml  promote.yml
.system/agents/: data-engineer-agent.md  data-quality-agent.md  devops-agent.md  infra-agent.md  observability-agent.md  streaming-agent.md
data/contracts/: cdc-orders.yaml
data/models/iceberg/bronze/: cdc_customers.sql  cdc_order_items.sql  cdc_orders.sql  kafka_events.sql
data/models/iceberg/gold/: customer_metrics.sql  daily_revenue.sql
data/models/iceberg/silver/: customers.sql  order_items.sql  orders.sql
data/schemas/: customer-cdc.schema.json  order-cdc.schema.json  order-item-cdc.schema.json
demo/: dashboard.py  generate_traffic.py  requirements.txt
docs/: architecture.md  roadmap.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-nessie-rest-catalog-over-hadoop.md  0003-strimzi-kafka-on-k3s.md  0004-debezium-cdc-over-polling.md  0005-iceberg-write-strategies-per-layer.md  0006-gitops-deployment-with-argocd.md  0007-quality-gate-as-deployment-blocker.md  0008-openlineage-marquez.md  0009-airflow-orchestration.md  0010-iac-boundaries.md  0011-lightweight-el-over-airbyte.md  0012-multi-env-promotion-applicationsets.md
docs/notes/: 2026-07-07-verification-live-roadmap-v2.md
infra/argocd/: project.yaml
infra/argocd/apps/: lakehouse-cloud.yaml  lakehouse-local.yaml
infra/argocd/bootstrap/: root.yaml
infra/argocd/control-plane/: applicationset.yaml  project.yaml
infra/argocd/envs/: dev.yaml  prod.yaml  staging.yaml
infra/kubernetes/base/: namespaces.yaml
infra/kubernetes/base/airflow/: db-init-job.yaml  deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml
infra/kubernetes/base/flink/: flink-deployment.yaml  flink-rbac.yaml  kustomization.yaml  minio-credentials.yaml  namespace.yaml
infra/kubernetes/base/kafka/: kafka-cluster.yaml  kustomization.yaml
infra/kubernetes/base/marquez/: configmap.yaml  db-init-job.yaml  deployment.yaml  kustomization.yaml  (+2 more)
infra/kubernetes/config/: k3s-config.yaml
infra/terraform/: .tflint.hcl  README.md
infra/terraform/aws/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/local/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
observability/grafana/dashboards/: flink.json  kafka.json  kubernetes.json  pipeline.json
observability/prometheus/: prometheus.yml
observability/prometheus/rules/: flink.yml  kafka.yml  kubernetes.yml  pipeline.yml
observability/superset/: README.md
pipelines/batch/: .dockerignore  Dockerfile
pipelines/batch/spark-jobs/: 01_bronze_ingest.py  02_silver_transform.py  03_gold_aggregate.py  lakehouse_common.py
pipelines/dbt/: .sqlfluff  dbt_project.yml  kustomization.yaml  profiles.yml
pipelines/dbt/tests/: assert_daily_revenue_unique_grain.sql
pipelines/ingestion/: exchange_rates_loader.py  requirements.txt
pipelines/orchestration/: .airflowignore  kustomization.yaml
pipelines/orchestration/dags/: lakehouse_batch.py
pipelines/streaming/kafka-connect/: Dockerfile  connect-metrics.yaml  debezium-db-credentials.yaml  debezium-postgres.yaml  kafka-connect.yaml  kustomization.yaml
pipelines/streaming/kafka-topics/: cdc-customers.yaml  cdc-order-items.yaml  cdc-orders.yaml  connect-internal-topics.yaml  debezium-transaction.yaml  dlq-cdc.yaml  gold-order-revenue.yaml  kustomization.yaml  raw-events.yaml
quality/great-expectations/: great_expectations.yml  requirements-quality.txt  runner.py
quality/great-expectations/checkpoints/: bronze.yml  gold.yml  silver.yml
quality/great-expectations/expectations/: bronze_cdc_customers.json  bronze_cdc_order_items.json  bronze_cdc_orders.json  bronze_kafka_events.json  gold_customer_metrics.json  gold_daily_revenue.json  silver_customers.json  silver_order_items.json  silver_orders.json
quality/tests/: conftest.py
quality/tests/unit/: test_cdc_parsing.py  test_deduplication.py  test_exchange_rates_loader.py  test_traffic_generator.py  test_transformations.py
scripts/: bootstrap.sh  build-batch-image.sh  build-connect-image.sh  build-flink-job-image.sh  demo.sh  deploy.sh  init_iceberg.py  install-argocd.sh  install-flink-operator.sh  install-strimzi.sh  promote.sh  register_lineage.py  run-batch.sh  run-iceberg-init.sh  run-quality-gate.sh  setup-k3s.sh  test.sh
(+54 files in other folders)
